--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Referencia a Estilos -->
     <link rel="stylesheet" href="./front/css/styles.css">
+    <!-- Referencia a archivo JS -->
+    <script defer src="./back/scripts/notificaciones.js"></script>
     <title>Turnos Medicos</title>
 </head>
 <body>
     <header>
 
-   <h1>Turnos medicos</h1>
+    <h1>Turnos medicos</h1>
     </header>
 
 
